# ESP32_SLEEP_MODE

ESP32_MODE/: CMakeLists.txt
ESP32_MODE/component/deepSleep/: CMakeLists.txt
ESP32_MODE/main/: main.c
